XMLExper/m12/m12_524_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘void tinyxml2::XMLDocument::DeepCopy(tinyxml2::XMLDocument*) const’:
tinyxml2.cpp:2279:99: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLText*’ (conversion casts away constness)
 2279 |  for (const XMLNode* node = this->FirstChild(); node; /*PCI*/dynamic_cast<tinyxml2::XMLText*>(node) = node->NextSibling()) {
      |                                                                                                   ^
diff: tinyxml2.o: No such file or directory
